--- a/styles/style.css
+++ b/styles/style.css
@@ -61,7 +61,7 @@ ol {
   gap: 30px;
   grid-template-areas: 
   "result content__details"
-  "search-form content__details";
+  "result content__details";
   grid-template-columns: 1fr auto;
   grid-template-rows: 1fr auto;
  }
@@ -212,7 +212,7 @@ ol {
   opacity: 0;
   transition: opacity 0.2s ease;
   width: 15px;
-  height: 15px; 
+  height: 15px;
 }
 
 .search-form__checkbox:focus {
