--- a/styles/style.css
+++ b/styles/style.css
@@ -68,12 +68,16 @@ ol {
 
 .result {
   grid-area: result;
+  margin-top: 78px;
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 7px
 }
 
 .result__video-container {
   width: 711px;
   height: 386px;
-  margin-bottom: 18px;
+  margin-bottom: 16px;
   position: relative;
   
 }
@@ -88,8 +92,7 @@ ol {
   grid-area: content__details;
   width: 100%;
   height: 100%;
-  gap: 26px;
-  position: relative;
+  gap: 20px;
 }
 
 .search-form {
@@ -116,16 +119,23 @@ ol {
 }
 
 .content__list {
+  overflow-y: auto;
+}
+
+.content__list-container {
+  position: relative;
+  block-size: 298px;
+  overflow: auto;
   width: 399px;
   max-height: 299px;
-  overflow-y: auto;
-  position: relative;
+  
 }
 
 .content__list-item {
   display: block;
   padding-left: 3px;
   padding-right: 3px;
+  margin-block-end: 30px;
 }
 
 .content__list-item:not(:last-of-type) {
@@ -139,8 +149,8 @@ ol {
 }
 
 .content__video-card-thumbnail {
-  inline-size: 180px;
-  block-size: 103px;
+  width: 196px;
+  height: 103px;
   object-fit: cover;
   object-position: center;
 }
@@ -229,7 +239,7 @@ ol {
   line-height: 70.5px;
   font-family: 'Oswald', sans-serif;
   text-transform: uppercase;
-  margin-bottom: 26px;
+  margin-bottom: 22px;
 }
 
 .content__accent {
@@ -238,7 +248,7 @@ ol {
 
 .content__card-link {
   text-decoration: none;
-  color: #545050;
+  color: #FFFFFF;
   display: block;
 }
 
@@ -247,6 +257,10 @@ ol {
 }
 
 .content__card-link:active {
+  background-color: #545050;
+}
+
+.content__card-link_current {
   background-color: #545050;
 }
 
@@ -259,6 +273,8 @@ ol {
   overflow: hidden;
   white-space: nowrap;
   text-overflow: ellipsis;
+  overflow: hidden;
+  width: 194px;
 }
 
 .content__video-card-description {
@@ -305,7 +321,7 @@ ol {
 }
 
 .more-button {
-  width: 100%;
+  max-width: 390px;
   padding: 6px 0;
 }
 
