--- a/styles/style.css
+++ b/styles/style.css
@@ -135,7 +135,6 @@ ol {
   display: block;
   padding-left: 3px;
   padding-right: 3px;
-  margin-block-end: 30px;
 }
 
 .content__list-item:not(:last-of-type) {
@@ -323,6 +322,7 @@ ol {
 .more-button {
   max-width: 390px;
   padding: 6px 0;
+  margin-top: 30px;
 }
 
 .button:hover {
